      during a flush.  This is currently to support 
      many-to-many relations from concrete inheritance setups.
      Outside of that use case, YMMV.  [ticket:1477]
      
- sql
    - Fixed a bug in extract() introduced in 0.5.4 whereby
      the string "field" argument was getting treated as a 
      ClauseElement, causing various errors within more 
      complex SQL transformations.
      
0.5.5
=======
- general
    - unit tests have been migrated from unittest to nose.  See
      README.unittests for information on how to run the tests.
      [ticket:970]

- orm
    - The "foreign_keys" argument of relation() will now propagate
      automatically to the backref in the same way that primaryjoin
      and secondaryjoin do.  For the extremely rare use case where
      the backref of a relation() has intentionally different
      "foreign_keys" configured, both sides now need to be
      configured explicity (if they do in fact require this setting,
      see the next note...).

    - ...the only known (and really, really rare) use case where a
      different foreign_keys setting was used on the
      forwards/backwards side, a composite foreign key that
      partially points to its own columns, has been enhanced such
      that the fk->itself aspect of the relation won't be used to
      determine relation direction.

    - Session.mapper is now *deprecated*.

      Call session.add() if you'd like a free-standing object to be
      part of your session.  Otherwise, a DIY version of
      Session.mapper is now documented at
      http://www.sqlalchemy.org/trac/wiki/UsageRecipes/SessionAwareMapper
      The method will remain deprecated throughout 0.6.

    - Fixed Query being able to join() from individual columns of a
      joined-table subclass entity, i.e.  query(SubClass.foo,
      SubcClass.bar).join(<anything>).  In most cases, an error
      "Could not find a FROM clause to join from" would be